--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -1,83 +1,84 @@
 <div ng-controller="languageController">
-<div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
-    <div layout="column" class="top-corner">
-        <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="margin-bottom-3"
-             src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
-        <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
-             class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
-             alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-        <img ng-show="outdoorCtrl.showOfflineAnchorsIcon" ng-click="outdoorCtrl.showOfflineAnchors()"
-             src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
-             title="{{lang.offlineAnchors}}">
-        <img ng-show="outdoorCtrl.showEngineOffIcon"
-             src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
-             title="{{lang.engineOff}}">
-    </div>
-    <!--map container-->
-    <div id="map-div">
-        <ng-map id="outdoor-map" center="{{outdoorCtrl.mapConfiguration.center}}"
-                zoom="{{outdoorCtrl.mapConfiguration.zoom}}"
-                mape-type-id="{{outdoorCtrl.mapConfiguration.map_type}}" class="height-100-vh">
-
-            <custom-marker ng-repeat="marker in outdoorCtrl.positions"
-                           on-click="outdoorCtrl.markerClicked()"
-                           id="custom-marker-{{$index}}"
-                           position="{{marker.position}}">
-                <div>
-                    <img ng-src="img/markers-images/{{marker.icon}}" alt="{{marker.name}}"
-                         title="{{marker.name}}">
-                </div>
-            </custom-marker>
-        </ng-map>
-    </div>
-    <!--end map container-->
-
-    <!--menu container-->
-    <div flex="100" ng-controller="menuController">
-
-        <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
-            <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="">
+    <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
+        <div layout="column" class="top-corner">
+            <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="margin-bottom-3"
+                 src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
+            <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
+                 class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
+                 alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
+            <img ng-show="outdoorCtrl.showEngineOffIcon"
+                 src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
+                 title="{{lang.engineOff}}">
         </div>
+        <!--map container-->
+        <div id="map-div">
+            <ng-map id="outdoor-map" center="{{outdoorCtrl.mapConfiguration.center}}"
+                    zoom="{{outdoorCtrl.mapConfiguration.zoom}}"
+                    mape-type-id="{{outdoorCtrl.mapConfiguration.map_type}}" class="height-100-vh">
 
-        <div ng-show="!canvasCtrl.switch.showDrawing" id="home-button" ng-click="outdoorCtrl.goHome()"
-             class="margin-left--8-px cursor-pointer outline-none">
-            <img id="home-button-icon" src="img/icons/home_16.png" alt="Menu" title="Menu">
+                <custom-marker ng-repeat="marker in outdoorCtrl.positions"
+                               on-click="outdoorCtrl.markerClicked()"
+                               id="custom-marker-{{$index}}"
+                               position="{{marker.position}}">
+                    <div>
+                        <img ng-src="img/markers-images/{{marker.icon}}" alt="{{marker.name}}"
+                             title="{{marker.name}}">
+                    </div>
+                </custom-marker>
+            </ng-map>
         </div>
+        <!--end map container-->
 
-        <section layout="row" flex>
+        <!--menu container-->
+        <div flex="100" ng-controller="menuController">
 
-            <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-whiteframe="4">
+            <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--8-px cursor-pointer outline-none">
+                <img id="open-menu-icon" src="img/icons/menu-arrow.png" alt="">
+            </div>
 
-                <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
-                    <h1 class="md-toolbar-tools color-black">Menu</h1>
-                    <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                        <img src="img/icons/menu/close-menu.png" alt="{{lang.closeButton}}" title="{{lang.closeButton}}">
-                    </div>
-                </md-toolbar>
+            <div ng-show="!canvasCtrl.switch.showDrawing" id="home-button" ng-click="outdoorCtrl.goHome()"
+                 class="margin-left--8-px cursor-pointer outline-none">
+                <img id="home-button-icon" src="img/icons/home_16.png" alt="Menu" title="Menu">
+            </div>
 
-                <md-content layout-margin class="margin-top-10">
+            <section layout="row" flex>
 
-                    <div layout="column" layout-align="center center">
-                        <img src="img/icons/login-icon.png" class="home-menu-logo" alt="Smart Track"
-                             title="Smart Track">
-                        <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
-                    </div>
+                <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-whiteframe="4">
+
+                    <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
+                        <h1 class="md-toolbar-tools color-black">Menu</h1>
+                        <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
+                            <img src="img/icons/menu/close-menu.png" alt="{{lang.closeButton}}"
+                                 title="{{lang.closeButton}}">
+                        </div>
+                    </md-toolbar>
+
+                    <md-content layout-margin class="margin-top-10">
+
+                        <div layout="column" layout-align="center center">
+                            <img src="img/icons/login-icon.png" class="home-menu-logo" alt="Smart Track"
+                                 title="Smart Track">
+                            <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
+                        </div>
 
                         <div layout="column" id="menu-container">
                             <md-list ng-controller="menuController">
-                                <md-list-item ng-click="registry()"><p>{{lang.weTagTable}}</p><img
+                                <md-list-item ng-click="registry('outdoor')"><p>{{lang.weTagTable | uppercase}}</p><img
                                         src="img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="viewHistory()"><p>{{lang.history}}</p><img
+                                <md-list-item ng-click="viewHistory()"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="quickActions()"><p>{{lang.quickActions}}</p><img
+                                <md-list-item ng-click="quickActions()"><p>{{lang.quickActions | uppercase}}</p><img
                                         src="img/icons/menu/quick_action_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="changePassword()"><p>{{lang.changePassword}}</p><img
+                                <md-list-item ng-click="zoneOutdoor()"><p>{{lang.zoneTable | uppercase}}</p><img
+                                        src="img/icons/menu/floor-icon.png" class="menu-list-icon"
+                                        alt=""></md-list-item>
+                                <md-list-item ng-click="changePassword()"><p>{{lang.changePassword | uppercase}}</p><img
                                         src="img/icons/menu/password_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="logout()"><p class="color-red">{{lang.logout}}</p><img
+                                <md-list-item ng-click="logout()"><p class="color-red">{{lang.logout | uppercase}}</p><img
                                         src="img/icons/menu/logout_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
                             </md-list>
@@ -96,11 +97,50 @@
                                 </md-input-container>
                             </div>
 
+                            <div layout="row" layout-align="center center" class="width-300-px">
+
+                                <div id="draw-rect-on-off-container" layout="column" class="padding-10-px width-50"
+                                     layout-align="center center">
+
+                                    <div flex="100" layout layout-align="center center">
+                                        <md-subheader class="padding-0" ng-show="switch.showOutdoorRectDrawing">
+                                            {{lang.outdoorRectDrawing}}:
+                                            <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="!switch.showOutdoorRectDrawing">
+                                            {{lang.outdoorRectDrawing}}: <b class="color-red">OFF</b></md-subheader>
+                                    </div>
+
+                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"
+                                               md-no-ink aria-label="Mostra/nascondi i tag fuori location"
+                                               ng-model="switch.showOutdoorRectDrawing">
+                                    </md-switch>
+                                </div>
+                                <div id="draw-round-on-off-container" layout="column" class="padding-10-px width-50"
+                                     layout-align="center center">
+
+                                    <div flex="100" layout layout-align="center center">
+                                        <md-subheader class="padding-0" ng-show="switch.showOutdoorRoundDrawing">
+                                            {{lang.outdoorRoundDrawing}}:
+                                            <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="!switch.showOutdoorRoundDrawing">
+                                            {{lang.outdoorRoundDrawing}}: <b class="color-red">OFF</b></md-subheader>
+                                    </div>
+
+                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"
+                                               md-no-ink aria-label="Mostra/nascondi i tag fuori location"
+                                               ng-model="switch.showOutdoorRoundDrawing">
+                                    </md-switch>
+                                </div>
+                            </div>
                             <div id="fullscreen-on-off-container" layout="column"
-                                 class="padding-10-px width-50 width-100" layout-align="center center">
+                                 class="padding-10-px width-100" layout-align="center center">
 
                                 <div flex="100" layout layout-align="center center">
-                                    <md-subheader class="padding-0">{{lang.fullscreen}}: <b class="color-red">OFF</b>
+                                    <md-subheader class="padding-0" ng-show="switch.mapFullscreen">
+                                        {{lang.fullscreen}}: <b class="color-green">ON</b>
+                                    </md-subheader>
+                                    <md-subheader class="padding-0" ng-show="!switch.mapFullscreen">
+                                        {{lang.fullscreen}}: <b class="color-red">OFF</b>
                                     </md-subheader>
                                 </div>
 
