--- a/components/insert-floor-row.html
+++ b/components/insert-floor-row.html
@@ -70,7 +70,7 @@
                                    class="ng-hide"
                                    id="marker-image">
                         </label>
-                        {{lang.selectImage | uppercase}}
+                        {{lang.selectMap | uppercase}}
                     </md-button>
                 </div>
                 <md-button ng-click="insertFloor(insertFloorForm)" class="md-raised  background-darkcyan color-white">
