--- a/components/insert-location.html
+++ b/components/insert-location.html
@@ -64,15 +64,25 @@
                 </md-input-container>
             </div>
 
-            <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
-                <input required type="number" ng-model="location.radius" name="locationRadius"
-                       placeholder="{{lang.coverInGrades}}">
-                <div ng-messages="insertLocationForm.locationRadius.$error || insertLocationForm.$submitted"
-                     role="alert">
-                    <div ng-message=" required">{{lang.insertRadius}}</div>
-                </div>
-            </md-input-container>
+            <div layout="row">
+                <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
+                    <input required type="number" ng-model="location.radius" name="locationRadius"
+                           placeholder="{{lang.coverInGrades}}">
+                    <div ng-messages="insertLocationForm.locationRadius.$error || insertLocationForm.$submitted"
+                         role="alert">
+                        <div ng-message=" required">{{lang.insertRadius}}</div>
+                    </div>
+                </md-input-container>
 
+                <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
+                    <input required type="number" ng-model="location.meterRadius" name="locationMeterRadius"
+                           placeholder="{{lang.coverInGrades}}">
+                    <div ng-messages="insertLocationForm.locationMeterRadius.$error || insertLocationForm.$submitted"
+                         role="alert">
+                        <div ng-message=" required">{{lang.insertRadius}}</div>
+                    </div>
+                </md-input-container>
+            </div>
             <md-input-container md-no-float class="margin-bottom-0">
                 <div layout="row" layout-align="center center">
                     <md-checkbox ng-model="location.isIndoor" aria-label="Checkbox 1"
